update: prepare to executable

--- a/package.json
+++ b/package.json
@@ -4,38 +4,39 @@
   "description": "Multi-Purpose Discord Bot",
   "main": "src/index.ts",
   "scripts": {
-    "run": "",
+    "start": "ts-node src/index.ts",
     "pretest": "",
     "test": "ava",
     "posttest": "",
-    "build": ""
+    "build": "",
+    "lint": "tslint --fix --project tsconfig.json"
   },
   "author": "Haze Lee <hazelee@realignist.me>",
   "license": "MIT",
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
     "@types/debug": "^4.1.5",
-    "@types/lodash": "^4.14.136",
-    "@types/node": "^12.7.2",
-    "ava": "^2.2.0",
+    "@types/lodash": "^4.14.141",
+    "@types/node": "^12.7.9",
+    "ava": "^2.4.0",
     "rxjs-tslint": "^0.1.7",
-    "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0",
     "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.3"
   },
   "dependencies": {
     "@discordjs/uws": "^11.149.1",
     "@types/date-fns": "^2.6.0",
-    "bluebird": "^3.5.5",
+    "bluebird": "^3.7.0",
     "bufferutil": "^4.0.1",
     "date-fns": "^2.4.1",
     "debug": "^4.1.1",
     "discord.js": "^11.5.1",
-    "ioredis": "^4.14.0",
+    "ioredis": "^4.14.1",
     "lodash": "^4.17.15",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
-    "typegoose": "^5.9.0"
+    "typegoose": "^5.9.1"
   }
 }
