--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bluebird": "^3.5.27",
     "@types/debug": "^4.1.5",
     "@types/lodash": "^4.14.141",
+    "@types/mongoose": "^5.5.18",
     "@types/node": "^12.7.9",
     "ava": "^2.4.0",
     "rxjs-tslint": "^0.1.7",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@discordjs/uws": "^11.149.1",
+    "@typegoose/typegoose": "^6.0.1",
     "@types/date-fns": "^2.6.0",
     "bluebird": "^3.7.0",
     "bufferutil": "^4.0.1",
@@ -35,8 +37,8 @@
     "discord.js": "^11.5.1",
     "ioredis": "^4.14.1",
     "lodash": "^4.17.15",
+    "mongoose": "^5.7.3",
     "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
-    "typegoose": "^5.9.1"
+    "rxjs-compat": "^6.5.3"
   }
 }
