--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bluebird": "^3.5.27",
+    "@types/charset": "^1.0.1",
     "@types/cheerio": "^0.22.13",
     "@types/debug": "^4.1.5",
+    "@types/iconv-lite": "0.0.1",
     "@types/lodash": "^4.14.141",
     "@types/mongoose": "^5.5.18",
     "@types/node": "^12.7.9",
@@ -35,10 +37,13 @@
     "axios": "^0.19.0",
     "bluebird": "^3.7.0",
     "bufferutil": "^4.0.1",
+    "charset": "^1.0.1",
     "cheerio": "^1.0.0-rc.3",
     "date-fns": "^2.4.1",
     "debug": "^4.1.1",
     "discord.js": "^11.5.1",
+    "fuzzball": "^1.3.0",
+    "iconv-lite": "^0.5.0",
     "ioredis": "^4.14.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.7.3",
