update: seperate log output in multiple guilds
 - add debug execution flag in configuration
 - add context if it possible
 - seperating log to each guild by context data

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ava",
     "posttest": "",
     "build": "",
-    "lint": "tslint --fix --project tsconfig.json"
+    "lint": "tslint --fix --project tsconfig.json",
+    "compile": "tsc"
   },
   "author": "Haze Lee <hazelee@realignist.me>",
   "license": "MIT",
