--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/charset": "^1.0.1",
     "@types/cheerio": "^0.22.13",
     "@types/debug": "^4.1.5",
+    "@types/got": "^9.6.7",
     "@types/lodash": "^4.14.144",
     "@types/mongoose": "^5.5.23",
     "@types/node": "^10.15.3",
@@ -34,7 +35,6 @@
     "@discordjs/uws": "^11.149.1",
     "@typegoose/typegoose": "^6.0.4",
     "apng2gif-bin": "^1.7.1",
-    "axios": "^0.19.0",
     "bluebird": "^3.7.1",
     "bufferutil": "^4.0.1",
     "charset": "^1.0.1",
@@ -43,6 +43,7 @@
     "debug": "^4.1.1",
     "discord.js": "^11.5.1",
     "fuzzball": "^1.3.0",
+    "got": "^9.6.0",
     "iconv-lite": "^0.5.0",
     "ioredis": "^4.14.1",
     "lodash": "^4.17.15",
