--- a/package.json
+++ b/package.json
@@ -16,41 +16,52 @@
   "author": "Haze Lee <hazelee@realignist.me>",
   "license": "MIT",
   "devDependencies": {
-    "@types/bluebird": "^3.5.28",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@types/bluebird": "^3.5.30",
     "@types/charset": "^1.0.1",
-    "@types/cheerio": "^0.22.13",
+    "@types/cheerio": "^0.22.16",
     "@types/debug": "^4.1.5",
-    "@types/got": "^9.6.7",
-    "@types/lodash": "^4.14.144",
-    "@types/mongoose": "^5.5.23",
-    "@types/node": "^10.15.3",
-    "@types/sharp": "^0.23.0",
-    "ava": "^2.4.0",
-    "rimraf": "^3.0.0",
+    "@types/got": "^9.6.9",
+    "@types/lodash": "^4.14.149",
+    "@types/mongoose": "^5.7.3",
+    "@types/node": "^12",
+    "@types/sharp": "^0.24.0",
+    "ava": "^3.5.0",
+    "rimraf": "^3.0.2",
     "rxjs-tslint": "^0.1.7",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
-    "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.6.4"
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
+    "tslint-config-standard": "^9.0.0",
+    "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@discordjs/uws": "^11.149.1",
-    "@typegoose/typegoose": "^6.0.4",
-    "bluebird": "^3.7.1",
+    "@typegoose/typegoose": "^6.4.0",
+    "apng2gif-bin": "^1.7.1",
+    "bluebird": "^3.7.2",
     "bufferutil": "^4.0.1",
     "charset": "^1.0.1",
     "cheerio": "^1.0.0-rc.3",
-    "date-fns": "^2.6.0",
+    "date-fns": "^2.10.0",
     "debug": "^4.1.1",
-    "discord.js": "^11.5.1",
+    "discord.js": "^12.0.1",
     "fuzzball": "^1.3.0",
-    "got": "^9.6.0",
-    "iconv-lite": "^0.5.0",
-    "ioredis": "^4.14.1",
+    "got": "^10.6.0",
+    "iconv-lite": "^0.5.1",
+    "ioredis": "^4.16.0",
     "lodash": "^4.17.15",
-    "mongoose": "^5.7.7",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
-    "sharp": "^0.23.1"
+    "mongoose": "^5.9.3",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
+    "sharp": "^0.24.1"
+  },
+  "engines": {
+    "node": "=12.x.x",
+    "npm": "=6.x.x"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
