refactor(lint): apply lint and make clear
 - apply lint and fix some rules
 - fix broken commitlint and tusky settings

--- a/.commitlintrc.yml
+++ b/.commitlintrc.yml
@@ -15,10 +15,7 @@ rules:
       - test
       - revert
       - chore
-  scope-enum:
-    - 2
-    - always
   subject-case:
     - 2
     - always
-    - 'sentence-case'
+    - 'lower-case'
