--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
     ], 
     "@typescript-eslint/restrict-template-expressions": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/strict-boolean-expressions": 0
+    "@typescript-eslint/strict-boolean-expressions": 0,
+    "@typescript-eslint/promise-function-async": 0,
+    "@typescript-eslint/require-array-sort-compare": 0
   }
 }
