feat: integrating emoticons type

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,42 @@
-{
-  "extends": [
-    "standard-with-typescript",
-    "prettier/@typescript-eslint",
-    "plugin:ava/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings"
-  ],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  },
-  "plugins": [
-    "import"
-  ],
-  "rules": {
-    "promise/param-names": 0,
-    "import/no-unresolved": 0,
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "caughtErrors": "all",
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_",
-        "caughtErrorsIgnorePattern": "^_"
-      }
-    ], 
-    "@typescript-eslint/restrict-template-expressions": 0,
-    "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/strict-boolean-expressions": 0,
-    "@typescript-eslint/promise-function-async": 0,
-    "@typescript-eslint/require-array-sort-compare": 0
+  {
+    "extends": [
+      "standard-with-typescript",
+      "plugin:ava/recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings",
+      "prettier/@typescript-eslint"
+    ],
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "plugins": [
+      "import"
+    ],
+    "rules": {
+      "comma-dangle": "off",
+      "promise/param-names": 0,
+      "import/no-unresolved": 0,
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "caughtErrors": "all",
+          "argsIgnorePattern": "^_",
+          "varsIgnorePattern": "^_",
+          "caughtErrorsIgnorePattern": "^_"
+        }
+      ],
+      "@typescript-eslint/restrict-template-expressions": 0,
+      "@typescript-eslint/explicit-function-return-type": 0,
+      "@typescript-eslint/strict-boolean-expressions": 0,
+      "@typescript-eslint/promise-function-async": 0,
+      "@typescript-eslint/require-array-sort-compare": 0,
+      "ava/no-ignored-test-files": [
+        0,
+        {
+          "files": [
+            "**/*.spec.ts"
+          ]
+        }
+      ]
+    }
   }
-}
