--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ava",
     "build": "tsc",
     "lint": "eslint --fix --ext .js,.ts .",
-    "clean": "rimraf package-lock.json node-modules && npm install"
+    "clean": "rimraf package-lock.json node_modules && npm install"
   },
   "author": "Haze Lee <hazelee@realignist.me>",
   "license": "MIT",
@@ -26,6 +26,7 @@
     "@types/node": "^12",
     "@types/sharp": "^0.25.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "ava": "^3.8.2",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.0.0",
