--- a/package.json
+++ b/package.json
@@ -13,64 +13,56 @@
   "author": "Haze Lee <hazelee@realignist.me>",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@types/bluebird": "^3.5.31",
-    "@types/charset": "^1.0.1",
-    "@types/cheerio": "^0.22.18",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
+    "@types/bluebird": "^3.5.33",
+    "@types/charset": "^1.0.2",
+    "@types/cheerio": "^0.22.28",
     "@types/debug": "^4.1.5",
-    "@types/lodash": "^4.14.151",
-    "@types/mongoose": "^5.7.20",
+    "@types/lodash": "^4.14.168",
+    "@types/mongoose": "^5.10.4",
     "@types/node": "^12",
-    "@types/sharp": "^0.25.0",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "ava": "^3.8.2",
-    "cz-conventional-changelog": "^3.2.0",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard-with-typescript": "^17.0.0",
-    "eslint-plugin-ava": "^10.3.0",
-    "eslint-plugin-import": "^2.20.2",
+    "@types/sharp": "^0.27.2",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "ava": "^3.15.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-ava": "^12.0.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.2.5",
-    "prettier": "^2.0.5",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "husky": "^4",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.0.7",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.9.2"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@typegoose/typegoose": "^7.1.0",
+    "@typegoose/typegoose": "^7.6.0",
     "apng2gif-bin": "^1.7.1",
     "bluebird": "^3.7.2",
-    "bufferutil": "^4.0.1",
+    "bufferutil": "^4.0.3",
     "charset": "^1.0.1",
-    "cheerio": "^1.0.0-rc.3",
-    "date-fns": "^2.13.0",
-    "debug": "^4.1.1",
+    "cheerio": "1.0.0-rc.5",
+    "date-fns": "^2.19.0",
+    "debug": "^4.3.1",
     "discord.js": "^12.2.0",
-    "fuzzball": "^1.3.0",
-    "got": "^11.1.4",
-    "iconv-lite": "^0.5.1",
-    "ioredis": "^4.17.1",
-    "lodash": "^4.17.19",
-    "mongoose": "^5.9.14",
-    "rxjs": "^6.5.5",
-    "rxjs-compat": "^6.5.5",
-    "sharp": "^0.25.2"
-  },
-  "engines": {
-    "node": "=12.x.x",
-    "npm": "=6.x.x"
+    "fuzzball": "^1.3.1",
+    "got": "^11.8.2",
+    "iconv-lite": "^0.6.2",
+    "ioredis": "^4.24.5",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.2",
+    "rxjs": "^6.6.6",
+    "rxjs-compat": "^6.6.6",
+    "sharp": "^0.27.2"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint",
+      "pre-commit": "yarn lint",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
@@ -82,10 +74,5 @@
     "require": [
       "ts-node/register"
     ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
